--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "start":"node dist/index.js",
-    "dev":"npm run build && npm run start"
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
